--- a/server/html/train.html
+++ b/server/html/train.html
@@ -8,10 +8,18 @@
 
 <center>
 
-<h3>RMSE loss on each iteration:</h3>
-{% for error in errors %}
-    <div>{{ error.train }}&nbsp;&nbsp;&nbsp;{{ error.val }}</div>
+<h3>Model info:</h3>
+<div>Model type: {{ model_type }}</div>
+{% for key in params.keys() %}
+    <div>{{ key }}:&nbsp;&nbsp;&nbsp;{{ params[key] }}</div>
 {% endfor %}
+
+<h3>RMSE loss on iterations:</h3>
+{% for error in errors %}
+    <div>{{ error.iteration }}&nbsp;&nbsp;&nbsp;{{ error.train }}&nbsp;&nbsp;&nbsp;{{ error.val }}</div>
+{% endfor %}
+
+<img src={{ graphic_source }} alt="Chart" width="800" height="600">
 
 <div class="again">
     {{ wtf.quick_form(again) }}
@@ -20,12 +28,6 @@
 <div class="predict">
     {{ wtf.quick_form(prediction) }}
 </div>
-
-<h3>Model info:</h3>
-<div>Model type: {{ model_type }}</div>
-{% for key in params.keys() %}
-    <div>{{ key }}:&nbsp;&nbsp;&nbsp;{{ params[key] }}</div>
-{% endfor %}
 
 </center>
 
