--- a/server/html/params.html
+++ b/server/html/params.html
@@ -1,19 +1,27 @@
 {% extends "base.html" %}
 
 
+{% block styles %}
+{{super()}}
+
+<link rel="stylesheet" type="text/css" href={{ url_for('static', filename='css/params.css') }}>
+
+{% endblock %}
+
+
 {% block title %}Choose parameters{% endblock %}
 
 
 {% block content %}
+<div class="wrapper">
+    <div class="container">
+        <h3>You can fill {{ default_param }} to auto-choose default parameter value</h3>
+        {{ wtf.quick_form(params) }}
+    </div>
 
-
-<div class="container">
-    <h3>You can fill {{ default_param }} to auto-choose default parameter value</h3>
-    {{ wtf.quick_form(params) }}
-</div>
-
-<div class="default">
-    {{ wtf.quick_form(default_button) }}
+    <div class="default">
+        {{ wtf.quick_form(default_button) }}
+    </div>
 </div>
 
 {% endblock %}
