--- a/server/html/train.html
+++ b/server/html/train.html
@@ -1,13 +1,20 @@
 {% extends "base.html" %}
 
 
+{% block styles %}
+{{super()}}
+
+<link rel="stylesheet" type="text/css" href={{ url_for('static', filename='css/train.css') }}>
+
+{% endblock %}
+
+
 {% block title %}Train model{% endblock %}
 
 
 {% block content %}
 
 <center>
-
 <h3>Model info:</h3>
 <div>Model type: {{ model_type }}</div>
 {% for key in params.keys() %}
@@ -28,7 +35,6 @@
 <div class="predict">
     {{ wtf.quick_form(prediction) }}
 </div>
-
 </center>
 
 {% endblock %}
